# hermes-agent-fork

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  cli.py  hermes_constants.py  model_tools.py  pyproject.toml  run_agent.py  toolsets.py
agent/: auxiliary_client.py  display.py  memory_provider.py  prompt_builder.py  redact.py
cron/: scheduler.py
docs/: deep-research-plan.md  roadmap.md  simplification-plan.md  tech-context.md  what-i-want.md
docs/to-study/: about-memory-systems.md  books-and-papers-free.md
gateway/: channel_directory.py  config.py  delivery.py  run.py  session.py
hermes_cli/: claw.py  commands.py  config.py  doctor.py  main.py  memory_setup.py  setup.py  skills_config.py  status.py  tools_config.py
plugins/memory/: __init__.py
scripts/: install.ps1  install.sh
tests/: test_cli_init.py  test_cli_provider_resolution.py  test_evidence_store.py  test_model_tools.py  test_packaging_metadata.py  test_project_metadata.py  test_run_agent.py  test_toolsets.py
tests/agent/: test_memory_provider.py  test_prompt_builder.py
tests/cli/: test_cli_extension_hooks.py  test_cli_loading_indicator.py  test_cli_provider_resolution.py
tests/gateway/: test_agent_cache.py  test_api_server_toolset.py  test_approve_deny_commands.py  test_async_memory_flush.py  test_background_command.py  test_channel_directory.py  test_config.py  test_delivery.py  test_media_extraction.py  test_pii_redaction.py  test_platform_reconnect.py  test_reasoning_command.py  test_run_progress_topics.py  test_runner_fatal_adapter.py  test_session.py  test_session_dm_thread_seeding.py  test_title_command.py
tests/hermes_cli/: test_commands.py  test_managed_installs.py  test_placeholder_usage.py  test_setup.py  test_setup_noninteractive.py  test_setup_openclaw_migration.py  test_tools_config.py  test_update_gateway_restart.py
tests/run_agent/: test_run_agent.py
tests/skills/: test_google_oauth_setup.py  test_google_workspace_api.py  test_memento_cards.py  test_openclaw_migration.py  test_telephony_skill.py  test_youtube_quiz.py
tests/tools/: test_browser_console.py  test_browser_ssrf_local.py  test_command_guards.py  test_llm_content_none_guard.py  test_local_env_blocklist.py  test_modal_sandbox_fixes.py  test_search_hidden_dirs.py  test_send_message_tool.py  (+3 more)
tools/: approval.py  browser_tool.py  debug_helpers.py  file_operations.py  file_tools.py  image_generation_tool.py  send_message_tool.py  skill_manager_tool.py  skills_sync.py  skills_tool.py  terminal_tool.py  tool_backend_helpers.py  web_tools.py
(+4 files in other folders)
